<resources>
    <string name="app_name">Implicit Intent</string>
    <string name="url_hint">https://example.com</string>
    <string name="btn_url">Open Website</string>
    <string name="location_hint">Politeknik Negeri Banjarmasin</string>
    <string name="btn_location">Open Location</string>
    <string name="btn_text">Share Text</string>
    <string name="share_text_with">Share this text with</string>
    <string name="text_hint">Hello World!</string>
</resources>